<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_managePlayers" android:icon="@android:drawable/ic_menu_agenda"
            android:title="@string/title_activity_manage_players" />
        <item android:id="@+id/nav_loadSession" android:icon="@android:drawable/ic_menu_save"
            android:title="@string/title_activity_load_session" />
        <item android:id="@+id/nav_about" android:icon="@android:drawable/ic_menu_help"
            android:title="@string/title_activity_about" />
    </group>

    <item android:title="@string/communicate">
        <menu>
            <item android:id="@+id/nav_email" android:icon="@android:drawable/ic_dialog_email"
                android:title="@string/emailMe" />

            <item android:id="@+id/nav_rate" android:icon="@android:drawable/btn_star_big_on"
                android:title="@string/rate" />
        </menu>
    </item>

</menu>