<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_add_player_rootLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <EditText
        android:id="@+id/player_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/playerHint"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/skill_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/playerSkillHint"
        android:inputType="number"
        android:maxLength="3" />

    <com.dgnt.pro.quickTeamPicker.view.InstantAutoCompleteView
        android:id="@+id/group_actv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:hint="@string/groupHint" />

</LinearLayout>